accordion bars below current section - spacing fixed

--- a/service-front/public/assets/v2/css/application.css
+++ b/service-front/public/assets/v2/css/application.css
@@ -4212,4 +4212,7 @@ input[type=number] {
   .content-body {
     min-height: 400px; } }
 
+.current + .complete {
+  margin-top: 30px; }
+
 /*# sourceMappingURL=application.css.map */
